# pcdsutils

./: .coveragerc  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.rst  MANIFEST.in  Makefile  README.rst  dev-requirements.txt  docs-requirements.txt  github_deploy_key_pcdshub_pcdsutils.enc  index.html  logging.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  versions.json
.github/workflows/: standard.yml
conda-recipe/: meta.yaml
docs/: Makefile  update_api_list.py
docs/source/: conf.py  index.rst  releases.rst
examples/qt/: popbar.py
master/: .buildinfo  api.html  genindex.html  index.html  objects.inv  releases.html  search.html  searchindex.js  upcoming_changes.html
master/_modules/: index.html
master/_sources/: api.rst.txt  index.rst.txt  releases.rst.txt
master/upcoming_release_notes/: 51-add-get-info-json.html  template-full.html  template-short.html
pcdsutils/: __init__.py  _version.py  enum.py  ext_scripts.py  import_timer.py  info.py  json_to_table.py  log.py  ophyd.py  ophyd_helpers.py  profile.py  release_notes.py  requirements.py  search.py  utils.py
pcdsutils/qt/: __init__.py  callbacks.py  designer_display.py  lazy.py  popbar.py  properties.py
pcdsutils/tests/: dummy_submodule.py  test_designer_display.py  test_enum.py  (+8 more)
v0.13.0/: api.html  genindex.html  index.html  objects.inv  releases.html  search.html  searchindex.js  upcoming_changes.html
v0.14.0/: index.html  objects.inv  searchindex.js  upcoming_changes.html
v0.14.1/: .buildinfo  api.html  genindex.html  index.html
(+64 files in other folders)
