[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=45", "setuptools_scm[toml]>=6.2",]

[project]
classifiers = [ "Development Status :: 2 - Pre-Alpha", "Natural Language :: English", "Programming Language :: Python :: 3",]
description = "PCDS Python Utilities"
dynamic = [ "version", "readme", "dependencies", "optional-dependencies",]
keywords = []
name = "pcdsutils"
requires-python = ">=3.9"
[[project.authors]]
name = "SLAC National Accelerator Laboratory"

[options]
zip_safe = false
include_package_data = true

[project.license]
file = "LICENSE"

[project.scripts]
json-to-table = "pcdsutils.json_to_table:_entrypoint"
pcdsutils-get-info-json = "pcdsutils.info:main"
pcdsutils-import-timer = "pcdsutils.import_timer:_entrypoint"
pcdsutils-requirements-compare = "pcdsutils.requirements:_compare_requirements"
pcdsutils-requirements-from-conda = "pcdsutils.requirements:_requirements_from_conda"

[tool.setuptools_scm]
write_to = "pcdsutils/_version.py"

[tool.setuptools.packages.find]
where = [ ".",]
include = [ "pcdsutils*",]
namespaces = false

[tool.setuptools.dynamic.readme]
file = "README.rst"

[tool.setuptools.dynamic.dependencies]
file = [ "requirements.txt",]

[tool.setuptools.dynamic.optional-dependencies.test]
file = "dev-requirements.txt"

[tool.setuptools.dynamic.optional-dependencies.doc]
file = "docs-requirements.txt"
